BAP-22624: Add optional Server URLs to OpenAPI specification management (#38576)
